spacing fix for category and archive pages

--- a/assets/less/jomi/listing.less
+++ b/assets/less/jomi/listing.less
@@ -67,7 +67,7 @@
     */
    .archive {
       div.container.wrap{
-         padding-top: 25px;     
+         //padding-top: 25px;     
       }
    }
 }
